fluxcd/live/prod/public/documentation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: documentation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: documentation
      annotations:
        fluentbit.io/exclude_stdout-documentation: "true"
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-ghcr-io
      containers:
        - name: documentation
          image: ghcr.io/inoa-io/documentation
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            timeoutSeconds: 2
            failureThreshold: 2
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 0
