fluxcd/live/prod/public/documentation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentation
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: documentation
