fluxcd/live/prod/public/documentation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentation
  annotations:
    kubernetes.io/tls-acme: true
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: traefik
  rules:
    - host: docs.inoa.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documentation
                port:
                  name: http
  tls:
    - hosts: [docs.inoa.io]
      secretName: documentation-tls
